Implemented delete profile request
